# fast_basic

./: README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
