[tool.poetry]
name = "peotry add  fastapi uvicorn"
version = "0.1.0"
description = ""
authors = ["tcharrisson <tcharrisson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
vaderSentiment = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
